crates/swift-bridge-macro/tests/ui/unrecognized-enum-attribute.stderr
error: Did not recognize enum attribute "InvalidAttribute".
 --> tests/ui/unrecognized-enum-attribute.rs:7:20
  |
7 |     #[swift_bridge(InvalidAttribute)]
  |                    ^^^^^^^^^^^^^^^^
